--- a/04-css/oblikovanje.css
+++ b/04-css/oblikovanje.css
@@ -12,7 +12,9 @@ h1 {
     background-color: rgb(51, 0, 102, 0.1);}
   .slika
    {font-size: 0.9em; width: 40%; text-align: left; float: right; margin-left: 2em;}
-   .slika img {width: 100%; height: auto;}
+   .slika img {width: 100%; height: auto;border-radius: 50%;}
+   .slika p:last-child {font-size: 0.8em;}
+   a::before{content: '🔗';}
 body {
     /*  Barva pisave pod značko oz. oznako  */
     color: #333333; 
